@@ -70,12 +70,12 @@ if [ "${NO_PRERUN_QCOW2***REMOVED***" = "0" ]; then
 	echo "/:     offset $ROOT_OFFSET, length $ROOT_LENGTH"
 
 	ROOT_FEATURES="^huge_file"
-	for FEATURE in metadata_csum 64bit; do
+	for FEATURE in 64bit; do
 	if grep -q "$FEATURE" /etc/mke2fs.conf; then
 		ROOT_FEATURES="^$FEATURE,$ROOT_FEATURES"
 	fi
 	done
-	mkdosfs -n boot -F 32 -v "$BOOT_DEV" > /dev/null
+	mkdosfs -n boot -F 32 -s 4 -v "$BOOT_DEV" > /dev/null
 	mkfs.ext4 -L rootfs -O "$ROOT_FEATURES" "$ROOT_DEV" > /dev/null
 
 	mount -v "$ROOT_DEV" "${ROOTFS_DIR***REMOVED***" -t ext4
