@@ -1,3 +1,3 @@
 proc            /proc           proc    defaults          0       0
-BOOTDEV  /boot           vfat    defaults,flush    0       2
+BOOTDEV  /boot           vfat    defaults          0       2
 ROOTDEV  /               ext4    defaults,noatime  0       1
