@@ -1,5 +1,7 @@
 UNRELEASED:
-  * 
+  * Format the root partition with the metadata_csum option
+  * Format the boot partition with 4 sectors per cluster for a slight performance boost
+  * Remove 'flush' mount option from the boot partition
 2022-04-04:
   * Default "pi” user has been removed; the first-boot wizard enforces the creation of a new user account
   * rename-user script added to allow existing users to be renamed by temporarily rebooting to cut-down first-boot wizard
